--- a/app_public/static/public/css/general.css
+++ b/app_public/static/public/css/general.css
@@ -30,13 +30,13 @@ nav ul {
   list-style-type: none !important;
 }
 
-nav .navlinks {
+nav .nav-link {
   color: #00447c !important;
   font-weight: bold;
   font-size: 16px;
   margin-right: 15px;
 }
-nav .navlinks:hover {
+nav .nav-link:hover {
   color: var(--primary-color) !important;
 }
 
@@ -46,25 +46,12 @@ nav .navlinks:hover {
   padding: 10px 0;
 }
 
-footer {
-  background-color: #00447c;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-  margin-top: 50px;
-  font-size: 10px;
-  letter-spacing: 0.5px;
-}
-
-footer p {
-  margin: auto;
-}
-
 @media screen and (max-width: 991px) {
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%2300447c' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
   }
 
+ 
   nav #navbarNavAltMarkup {
     position: absolute !important;
     background: var(--background-color) !important;
@@ -78,6 +65,7 @@ footer p {
     padding: 10px 15px !important;
   }
 
+  
   nav #navbarNavAltMarkup .navbar-nav {
     display: flex !important;
     flex-direction: column !important;
